Fix bug that showed a white corner with scrollbar

--- a/src/styles/scrollbar.css
+++ b/src/styles/scrollbar.css
@@ -32,3 +32,7 @@
 *::-webkit-scrollbar-thumb:active {
   background-color: #717171;
 }
+
+::-webkit-scrollbar-corner {
+  background: rgba(0, 0, 0, 0);
+}
